# ripgrep

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  README.md
.github/workflows/: ci.yml  release.yml
ci/: test-complete
crates/cli/: Cargo.toml
crates/core/: main.rs
crates/core/flags/: defs.rs  hiargs.rs  lowargs.rs  mod.rs
crates/core/flags/complete/: rg.zsh
crates/core/flags/doc/: help.rs  man.rs  template.long.help  template.rg.1  template.short.help
crates/globset/: Cargo.toml
crates/globset/src/: lib.rs  pathutil.rs
crates/grep/: Cargo.toml
crates/ignore/: Cargo.toml
crates/ignore/src/: default_types.rs  dir.rs  gitignore.rs  incremental.rs  lib.rs  pathutil.rs  types.rs  walk.rs
crates/index/: Cargo.toml  README.md
crates/index/src/: literal.rs
crates/matcher/: Cargo.toml
crates/pcre2/: Cargo.toml
crates/printer/: Cargo.toml
crates/printer/src/: standard.rs  util.rs
crates/regex/: Cargo.toml
crates/searcher/: Cargo.toml
crates/searcher/src/: lib.rs
crates/searcher/src/searcher/: mmap.rs  mod.rs
pkg/brew/: ripgrep-bin.rb
tests/: misc.rs  regression.rs  util.rs
